AOL Prebid 1.7.0
----------------
Updated to Prebid 0.14.0


AOL Prebid 1.6.0
----------------
Support for reporting bid identifiers.
BUGFIX: indexExchange has now the correct bidder code.


AOL Prebid 1.5.1
----------------
BUGFIX: Fixed accidental build error associated with window=window.


AOL Prebid 1.5.0
----------------
Reporting support for Deals.
BUGFIX: Source version now has no errors associated with window=window.


AOL Prebid 1.4.2
----------------
BUGFIX: Fixed reporting refreshed ad units in AOL analytics.


AOL Prebid 1.4.1
----------------
Refactoring of AOL analytics.
Fixed reporting of pageId parameter in AOL analytics.
BUGFIX: Fixed retrieving 3rd party pixels from bid response in AOL adapter.


AOL Prebid 1.4.0
----------------
Updated to Prebid 0.13.1


AOL Prebid 1.3.1
----------------
Fixed reporting of timed out bids in AOL analytics.


AOL Prebid 1.3.0
----------------
Updated to Prebid 0.13.0.


AOL Prebid 1.2.0
----------------
Updated to Prebid 0.12.0.
Fixed sorting of per-adapter timeouts.
Fixed ES6 features which require a polyfill.


AOL Prebid 1.1.0
----------------
AOL adapter is optimized and heavily reduced in size.
Small code optimizations in AOL analytics adapter.
AOL analytics adapter now includes currency in the hbevent requests.


AOL Prebid 1.0.7
----------------
BUGFIX: AOL analytics adapter reports timed out bids.


AOL Prebid 1.0.6
----------------
BUGFIX: Ensure that auctionId never exceeds max 64 bit value. Limit length to 18 digits.


AOL Prebid 1.0.5
----------------
BUGFIX: Ensure that an event is logged in the case when there are no bids from the DSPs.
Populate the bid object with the deal ID for private deals.


AOL Prebid 1.0.4
----------------
BUGFIX: Fixed default server for AOL adapter & analytics.
BUGFIX: Fixed region option to be picked up by AOL analytics.
BUGFIX: Separate server host names used for AOL adapter & analytics.
BUGFIX: Consolidated default parameter values for invalid bids in AOL analytics.

