@@ -1,3 +1,8 @@
+AOL Prebid dev
+----------------
+Added functionality of cookie syncing upon bid request
+
+
 AOL Prebid 1.7.0
 ----------------
 Updated to Prebid 0.14.0
